// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SYNTAX_AttributeEqualMissingValue with mimeType text/html should be reported 1`] = `
Array [
  Array [
    "error",
    "element parse error: Error: attribute value missed!!",
    Object {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeEqualMissingValue with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: element parse error: Error: attribute value missed!!
    at parse (lib/sax.js:#5)",
]
`;

exports[`SYNTAX_AttributeEqualMissingValue with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "error",
    "element parse error: Error: attribute value missed!!",
    Object {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeEqualMissingValue with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: element parse error: Error: attribute value missed!!
    at parse (lib/sax.js:#5)",
]
`;

exports[`SYNTAX_AttributeMissingEndingQuote with mimeType text/html should be reported 1`] = `
Array [
  Array [
    "error",
    "element parse error: Error: attribute value no end '\\"' match",
    Object {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeMissingEndingQuote with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: element parse error: Error: attribute value no end '\\"' match
    at parse (lib/sax.js:#5)",
]
`;

exports[`SYNTAX_AttributeMissingEndingQuote with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "error",
    "element parse error: Error: attribute value no end '\\"' match",
    Object {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeMissingEndingQuote with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: element parse error: Error: attribute value no end '\\"' match
    at parse (lib/sax.js:#5)",
]
`;

exports[`SYNTAX_ElementClosingNotConnected with mimeType text/html should be reported 1`] = `
Array [
  Array [
    "error",
    "element parse error: Error: elements closed character '/' and '>' must be connected to",
    Object {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_ElementClosingNotConnected with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: element parse error: Error: elements closed character '/' and '>' must be connected to
    at parse (lib/sax.js:#5)",
]
`;

exports[`SYNTAX_ElementClosingNotConnected with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "error",
    "element parse error: Error: elements closed character '/' and '>' must be connected to",
    Object {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_ElementClosingNotConnected with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: element parse error: Error: elements closed character '/' and '>' must be connected to
    at parse (lib/sax.js:#5)",
]
`;

exports[`SYNTAX_EndTagMaybeNotComplete with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "error",
    "end tag name: inner maybe not complete",
    Object {
      "columnNumber": 6,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_EndTagMaybeNotComplete with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: end tag name: inner maybe not complete
    at parse (lib/sax.js:#2)",
]
`;

exports[`SYNTAX_EndTagNotComplete with mimeType text/html should be reported 1`] = `
Array [
  Array [
    "error",
    "end tag name: xml is not complete",
    Object {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_EndTagNotComplete with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: end tag name: xml is not complete
    at parse (lib/sax.js:#1)",
]
`;

exports[`SYNTAX_EndTagNotComplete with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "error",
    "end tag name: xml is not complete",
    Object {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_EndTagNotComplete with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: end tag name: xml is not complete
    at parse (lib/sax.js:#1)",
]
`;

exports[`SYNTAX_InvalidAttributeName with mimeType text/html should be reported 1`] = `
Array [
  Array [
    "error",
    "element parse error: Error: invalid attribute:123",
    Object {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_InvalidAttributeName with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: element parse error: Error: invalid attribute:123
    at parse (lib/sax.js:#5)",
]
`;

exports[`SYNTAX_InvalidAttributeName with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "error",
    "element parse error: Error: invalid attribute:123",
    Object {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_InvalidAttributeName with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: element parse error: Error: invalid attribute:123
    at parse (lib/sax.js:#5)",
]
`;

exports[`SYNTAX_InvalidTagName with mimeType text/html should be reported 1`] = `
Array [
  Array [
    "error",
    "element parse error: Error: invalid tagName:123",
    Object {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_InvalidTagName with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: element parse error: Error: invalid tagName:123
    at parse (lib/sax.js:#5)",
]
`;

exports[`SYNTAX_InvalidTagName with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "error",
    "element parse error: Error: invalid tagName:123",
    Object {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_InvalidTagName with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: element parse error: Error: invalid tagName:123
    at parse (lib/sax.js:#5)",
]
`;

exports[`SYNTAX_UnclosedComment with mimeType text/html should be reported 1`] = `
Array [
  Array [
    "error",
    "Unclosed comment",
    Object {
      "columnNumber": 12,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_UnclosedComment with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: Unclosed comment
    at parseDCC (lib/sax.js:#21)",
]
`;

exports[`SYNTAX_UnclosedComment with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "error",
    "Unclosed comment",
    Object {
      "columnNumber": 12,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_UnclosedComment with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: Unclosed comment
    at parseDCC (lib/sax.js:#21)",
]
`;

exports[`SYNTAX_UnexpectedEndOfInput with mimeType text/html should be reported 1`] = `
Array [
  Array [
    "error",
    "unexpected end of input",
    Object {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_UnexpectedEndOfInput with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: unexpected end of input
    at parseElementStartPart (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_UnexpectedEndOfInput with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "error",
    "unexpected end of input",
    Object {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
  Array [
    "warning",
    "unclosed xml attribute",
    Object {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_UnexpectedEndOfInput with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: unexpected end of input
    at parseElementStartPart (lib/sax.js:#13)",
]
`;

exports[`WF_AttributeMissingQuote with mimeType text/html should be reported 1`] = `
Array [
  Array [
    "warning",
    "attribute \\"value\\" missed quot(\\")!",
    Object {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_AttributeMissingQuote with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "warning: attribute \\"value\\" missed quot(\\")!
    at parseElementStartPart (lib/sax.js:#14)",
]
`;

exports[`WF_AttributeMissingQuote with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "warning",
    "attribute \\"value\\" missed quot(\\")!",
    Object {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_AttributeMissingQuote with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "warning: attribute \\"value\\" missed quot(\\")!
    at parseElementStartPart (lib/sax.js:#14)",
]
`;

exports[`WF_AttributeMissingQuote2 with mimeType text/html should be reported 1`] = `
Array [
  Array [
    "warning",
    "attribute \\"&\\" missed quot(\\")!!",
    Object {
      "columnNumber": 12,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_AttributeMissingQuote2 with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "warning: attribute \\"&\\" missed quot(\\")!!
    at parseElementStartPart (lib/sax.js:#17)",
]
`;

exports[`WF_AttributeMissingQuote2 with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "warning",
    "attribute \\"&\\" missed quot(\\")!!",
    Object {
      "columnNumber": 12,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_AttributeMissingQuote2 with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "warning: attribute \\"&\\" missed quot(\\")!!
    at parseElementStartPart (lib/sax.js:#17)",
]
`;

exports[`WF_AttributeMissingStartingQuote with mimeType text/html should be reported 1`] = `
Array [
  Array [
    "warning",
    "attribute \\"attr\\" missed start quot(\\")!!",
    Object {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_AttributeMissingStartingQuote with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "warning: attribute \\"attr\\" missed start quot(\\")!!
    at parseElementStartPart (lib/sax.js:#10)",
]
`;

exports[`WF_AttributeMissingStartingQuote with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "warning",
    "attribute \\"attr\\" missed start quot(\\")!!",
    Object {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_AttributeMissingStartingQuote with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "warning: attribute \\"attr\\" missed start quot(\\")!!
    at parseElementStartPart (lib/sax.js:#10)",
]
`;

exports[`WF_AttributeMissingValue with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "warning",
    "attribute \\"attr\\" missed value!! \\"attr\\" instead!!",
    Object {
      "columnNumber": 6,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_AttributeMissingValue with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "warning: attribute \\"attr\\" missed value!! \\"attr\\" instead!!
    at parseElementStartPart (lib/sax.js:#15)",
]
`;

exports[`WF_AttributeMissingValue2 with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "warning",
    "attribute \\"attr\\" missed value!! \\"attr\\" instead2!!",
    Object {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
  Array [
    "warning",
    "attribute \\"attr2\\" missed value!! \\"attr2\\" instead!!",
    Object {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_AttributeMissingValue2 with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "warning: attribute \\"attr\\" missed value!! \\"attr\\" instead2!!
    at parseElementStartPart (lib/sax.js:#18)",
]
`;

exports[`WF_AttributeValueMustAfterEqual with mimeType text/html should be reported 1`] = `
Array [
  Array [
    "warning",
    "attribute value must after \\"=\\"",
    Object {
      "columnNumber": 10,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_AttributeValueMustAfterEqual with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "warning: attribute value must after \\"=\\"
    at parseElementStartPart (lib/sax.js:#8)",
]
`;

exports[`WF_AttributeValueMustAfterEqual with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "warning",
    "attribute value must after \\"=\\"",
    Object {
      "columnNumber": 10,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_AttributeValueMustAfterEqual with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "warning: attribute value must after \\"=\\"
    at parseElementStartPart (lib/sax.js:#8)",
]
`;

exports[`WF_EntityDeclared with mimeType text/html should be reported 1`] = `
Array [
  Array [
    "error",
    "entity not found:&e;",
    Object {
      "columnNumber": 6,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_EntityDeclared with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: entity not found:&e;
    at replace (lib/sax.js:#0)",
]
`;

exports[`WF_EntityDeclared with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "error",
    "entity not found:&e;",
    Object {
      "columnNumber": 6,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_EntityDeclared with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "error: entity not found:&e;
    at replace (lib/sax.js:#0)",
]
`;

exports[`WF_UnclosedXmlAttribute with mimeType text/xml should be reported 1`] = `
Array [
  Array [
    "warning",
    "unclosed xml attribute",
    Object {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_UnclosedXmlAttribute with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
Array [
  "warning: unclosed xml attribute
    at parse (lib/sax.js:#4)",
]
`;
